# lab4

./: CMakeLists.txt  run.sh
r20250812_162341hs/: r20250812_162341hs.vtune
r20250812_162341hs/config/: collection.cfg  context_values.cfg  log.cfg  runss.options
r20250812_162341hs/data.0/: 46909-46919.0-46919.0.th  46909-46919.0-46919.0.th.aux  46909-46919.0.trace  46919.stat.perf  perfcmd  systemcollector-46909-M600.sc
r20250814_124527_omp4/: r20250814_124527_omp4.vtune
r20250814_124527_omp4/config/: collection.cfg  context_values.cfg  log.cfg  runss.options
r20250814_124527_omp4/data.0/: 159426-159431.0-159431.0.th  159426-159431.0-159431.0.th.aux  159426-159431.0-159450.0.th  159426-159431.0-159450.0.th.aux  159426-159431.0-159451.0.th  159426-159431.0-159451.0.th.aux  159426-159431.0-159452.0.th  159426-159431.0-159452.0.th.aux  159426-159431.0.trace  systemcollector-159426-M700.sc
r20250814_124830_omp1/: r20250814_124830_omp1.vtune
r20250814_124830_omp1/config/: collection.cfg  context_values.cfg  log.cfg  runss.options
r20250814_124830_omp1/data.0/: 159503-159508.0-159508.0.th  159503-159508.0-159508.0.th.aux  159503-159508.0.trace  systemcollector-159503-M700.sc
r20250814_125106_omp2/: r20250814_125106_omp2.vtune
r20250814_125106_omp2/config/: collection.cfg  context_values.cfg  log.cfg  runss.options
r20250814_125106_omp2/data.0/: 159581-159586.0-159586.0.th  159581-159586.0-159586.0.th.aux  159581-159586.0-159605.0.th  159581-159586.0-159605.0.th.aux  159581-159586.0.trace  systemcollector-159581-M700.sc
r20250814_130048_omp8/: r20250814_130048_omp8.vtune
r20250814_130048_omp8/config/: collection.cfg  context_values.cfg  log.cfg  runss.options
r20250814_130048_omp8/data.0/: 160065-160070.0-160070.0.th  160065-160070.0-160070.0.th.aux  160065-160070.0-160089.0.th  160065-160070.0-160089.0.th.aux  160065-160070.0-160090.0.th  160065-160070.0-160090.0.th.aux  160065-160070.0-160091.0.th  160065-160070.0-160091.0.th.aux  160065-160070.0-160092.0.th  160065-160070.0-160092.0.th.aux  160065-160070.0-160093.0.th  160065-160070.0-160093.0.th.aux  160065-160070.0-160094.0.th  160065-160070.0-160094.0.th.aux  160065-160070.0-160095.0.th  160065-160070.0-160095.0.th.aux  160065-160070.0.trace  systemcollector-160065-M700.sc
r20250814_130546_omp16/: r20250814_130546_omp16.vtune
r20250814_130546_omp16/config/: collection.cfg  context_values.cfg  log.cfg  runss.options
r20250814_130546_omp16/data.0/: 160520-160525.0-160525.0.th  160520-160525.0-160525.0.th.aux  160520-160525.0-160544.0.th  (+31 more)
src/: main.cpp
(+44 files in other folders)
